--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 .inline-block{
     display: inline-block;
     vertical-align: top;
@@ -15,25 +11,33 @@ nav{
     width: 73%;
     padding: 1%;
 }
-nav a{
-    text-decoration: none;
-}
 ul{
     width: 50%;
     margin-left: auto;
 }
+
 .heroImg{
-    background: url("https://picsum.photos/seed/picsum/1920/700");
-    height: 700px;
-    background-repeat: no-repeat; 
+    height: 600px;
+    padding: 25px;
+}
+.heroImg img{
+    height:500px;
+    text-align: center;
 }
 .content{
     width: 500px;
     margin: 0 auto;
 }
+
 footer{
     background-color: #373738;
 }
-
+footer ul, footer li{
+    padding: 10px;
+}
+footer ul{
+    display: inline-block;
+    vertical-align: top;
+}
 
 
